# agentic-dark-pattern-detector

./: .gitignore  README.md  demo.py  docker-compose.yml  pyproject.toml  quick_demo.py  requirements.txt  setup_demo.bat  test_phase2.py  test_real_site.py
evals/: README.md  __init__.py  __main__.py  manifest.yaml  results.json  run.py  runner.py  scorer.py
evals/simulations/: clean_stock.html  confirmshaming.html  drip_pricing.html  false_urgency.html  forced_continuity.html  privacy_zuckering.html  roach_motel.html  sneak_into_basket.html
evals/tier1a/: __init__.py  harness.py
evals/tier1b/: __init__.py  harness.py
evals/tier2/: __init__.py  harness.py
skills/: detect-manipulation.md
src/: __init__.py
src/agent/: __init__.py  __main__.py  actor.py  auditor.py  checkpoints.py  core.py  debug.py  graph.py  ledger.py  mcp_client.py  planner.py  sandbox.py  security.py  wait_strategy.py
src/agent/detectors/: __init__.py  drip_pricing.py  false_urgency.py  forced_continuity.py  privacy_zuckering.py  roach_motel.py  sneak_into_basket.py
src/mcp/: __init__.py  server.py
src/schemas/: __init__.py  schemas.py  utils.py
